fix centering layout issue, add cart system

--- a/assets/css/cgv.css
+++ b/assets/css/cgv.css
@@ -1,5 +1,5 @@
 body{
-    padding: 40px 200px 0 200px;
+    padding: 40px 200px 40px 200px;
 }
 h1{
     padding: 40px 0 40px 0;
@@ -21,12 +21,12 @@ li{
 }
 @media screen and (max-width: 640px) {
     body{
-        padding: 40px 100px 0 100px;
+        padding: 40px 50px 0 50px;
     }
 }
 @media screen and (max-width: 900px) {
-    .container {
-        padding: 115px 0 0 30px;
+    /* .container {
+        padding: 115px 30px 0 30px;
 
-    }
+    } */
 }
