--- a/assets/css/product-page.css
+++ b/assets/css/product-page.css
@@ -18,7 +18,7 @@ button{
 }
 @media screen and (max-width: 900px) {
     .container {
-        padding: 100px 0 0 30px;
+        padding: 100px 30px 0 30px;
 
     }
 }
