--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -119,7 +119,7 @@ nav img {
     }
 
     .container {
-        padding: 80px 0 0 30px;
+        padding: 80px 30px 0 30px;
 
     }
 }
